// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataWell fixed width in row, no spaces 1`] = `
<div
  data-css-1s5t7h8=""
>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Dog count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      234,345
    </div>
    <div
      data-css-r0jy42=""
    >
      All the doggies
    </div>
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Cat count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      123
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      1,345/23,235
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Flotsam
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      About 3
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
</div>
`;

exports[`Storyshots DataWell label/data 1`] = `
<div
  data-css-76j83k=""
>
  <div>
    <span
      data-css-1xy8nxm=""
      data-css-4o8urc=""
    >
      Dog count
    </span>
  </div>
  <div
    data-css-1cytfqa=""
  >
    123
  </div>
  <div
    data-css-r0jy42=""
  />
</div>
`;

exports[`Storyshots DataWell label/data/subLabel 1`] = `
<div
  data-css-76j83k=""
>
  <div>
    <span
      data-css-1xy8nxm=""
      data-css-4o8urc=""
    >
      Dog count
    </span>
  </div>
  <div
    data-css-1cytfqa=""
  >
    234,345
  </div>
  <div
    data-css-r0jy42=""
  >
    All the doggies
  </div>
</div>
`;

exports[`Storyshots DataWell row 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Dog count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      234,345
    </div>
    <div
      data-css-r0jy42=""
    >
      All the doggies
    </div>
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Cat count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      123
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      12/23
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        data-css-1xy8nxm=""
        data-css-4o8urc=""
      >
        Flotsam
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      About 3
    </div>
    <div
      data-css-r0jy42=""
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;
